// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`page/Auth/AuthList/UpdateExpiration render init snap render snap when has select data 1`] = `
<body>
  <div />
  <div>
    <div
      class="ant-modal-root css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-modal-mask"
      />
      <div
        class="ant-modal-wrap"
        tabindex="-1"
      >
        <div
          aria-labelledby="test-id"
          aria-modal="true"
          class="ant-modal css-dev-only-do-not-override-txh9fw basic-modal-wrapper css-vvpsbb ant-zoom-appear ant-zoom-appear-prepare ant-zoom"
          role="dialog"
          style="width: 480px;"
        >
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
          <div
            class="ant-modal-content"
          >
            <button
              aria-label="Close"
              class="ant-modal-close"
              type="button"
            >
              <span
                class="ant-modal-close-x"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 14 14"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m7 6.175 2.887-2.887.825.825L7.825 7l2.887 2.888-.825.824L7 7.825l-2.888 2.887-.824-.824L6.175 7 3.288 4.113l.824-.825z"
                  />
                </svg>
              </span>
            </button>
            <div
              class="ant-modal-header"
            >
              <div
                class="ant-modal-title"
                id="test-id"
              >
                授权续期
              </div>
            </div>
            <div
              class="ant-modal-body"
            >
              <form
                class="ant-form ant-form-vertical css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-form-item css-nvfblu css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
                  >
                    <div
                      class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
                    >
                      <label
                        class="ant-form-item-required"
                        for="renewal_effective_time_day"
                        title="续期"
                      >
                        续期
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <div
                            aria-describedby="renewal_effective_time_day_extra"
                            aria-required="true"
                            class="ant-select ant-select-in-form-item basic-select-wrapper css-iy4o4x css-dev-only-do-not-override-v9sov3 ant-select-single ant-select-show-arrow"
                          >
                            <div
                              class="ant-select-selector"
                            >
                              <span
                                class="ant-select-selection-search"
                              >
                                <input
                                  aria-activedescendant="renewal_effective_time_day_list_0"
                                  aria-autocomplete="list"
                                  aria-controls="renewal_effective_time_day_list"
                                  aria-describedby="renewal_effective_time_day_extra"
                                  aria-expanded="false"
                                  aria-haspopup="listbox"
                                  aria-owns="renewal_effective_time_day_list"
                                  aria-required="true"
                                  autocomplete="off"
                                  class="ant-select-selection-search-input"
                                  id="renewal_effective_time_day"
                                  readonly=""
                                  role="combobox"
                                  style="opacity: 0;"
                                  type="search"
                                  unselectable="on"
                                  value=""
                                />
                              </span>
                              <span
                                class="ant-select-selection-placeholder"
                              >
                                请选择{{name}}
                              </span>
                            </div>
                            <span
                              aria-hidden="true"
                              class="ant-select-arrow"
                              style="user-select: none;"
                              unselectable="on"
                            >
                              <span
                                aria-label="down"
                                class="anticon anticon-down ant-select-suffix"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="down"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                      <div
                        class="ant-form-item-extra"
                        id="renewal_effective_time_day_extra"
                      >
                        说明：续期指在当前时间基础上增加有效期时间
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="ant-modal-footer"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
                type="button"
              >
                <span>
                  关 闭
                </span>
              </button>
              <button
                class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-primary basic-button-wrapper css-geipcv"
                type="button"
              >
                <span>
                  提 交
                </span>
              </button>
            </div>
          </div>
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`page/Auth/AuthList/UpdateExpiration render init snap render snap when no select data 1`] = `
<body>
  <div />
  <div>
    <div
      class="ant-modal-root css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-modal-mask"
      />
      <div
        class="ant-modal-wrap"
        tabindex="-1"
      >
        <div
          aria-labelledby="test-id"
          aria-modal="true"
          class="ant-modal css-dev-only-do-not-override-txh9fw basic-modal-wrapper css-vvpsbb ant-zoom-appear ant-zoom-appear-prepare ant-zoom"
          role="dialog"
          style="width: 480px;"
        >
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
          <div
            class="ant-modal-content"
          >
            <button
              aria-label="Close"
              class="ant-modal-close"
              type="button"
            >
              <span
                class="ant-modal-close-x"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 14 14"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m7 6.175 2.887-2.887.825.825L7.825 7l2.887 2.888-.825.824L7 7.825l-2.888 2.887-.824-.824L6.175 7 3.288 4.113l.824-.825z"
                  />
                </svg>
              </span>
            </button>
            <div
              class="ant-modal-header"
            >
              <div
                class="ant-modal-title"
                id="test-id"
              >
                授权续期
              </div>
            </div>
            <div
              class="ant-modal-body"
            >
              <form
                class="ant-form ant-form-vertical css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-form-item css-nvfblu css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
                  >
                    <div
                      class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
                    >
                      <label
                        class="ant-form-item-required"
                        for="renewal_effective_time_day"
                        title="续期"
                      >
                        续期
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <div
                            aria-describedby="renewal_effective_time_day_extra"
                            aria-required="true"
                            class="ant-select ant-select-in-form-item basic-select-wrapper css-iy4o4x css-dev-only-do-not-override-v9sov3 ant-select-single ant-select-show-arrow"
                          >
                            <div
                              class="ant-select-selector"
                            >
                              <span
                                class="ant-select-selection-search"
                              >
                                <input
                                  aria-activedescendant="renewal_effective_time_day_list_0"
                                  aria-autocomplete="list"
                                  aria-controls="renewal_effective_time_day_list"
                                  aria-describedby="renewal_effective_time_day_extra"
                                  aria-expanded="false"
                                  aria-haspopup="listbox"
                                  aria-owns="renewal_effective_time_day_list"
                                  aria-required="true"
                                  autocomplete="off"
                                  class="ant-select-selection-search-input"
                                  id="renewal_effective_time_day"
                                  readonly=""
                                  role="combobox"
                                  style="opacity: 0;"
                                  type="search"
                                  unselectable="on"
                                  value=""
                                />
                              </span>
                              <span
                                class="ant-select-selection-placeholder"
                              >
                                请选择{{name}}
                              </span>
                            </div>
                            <span
                              aria-hidden="true"
                              class="ant-select-arrow"
                              style="user-select: none;"
                              unselectable="on"
                            >
                              <span
                                aria-label="down"
                                class="anticon anticon-down ant-select-suffix"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="down"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                      <div
                        class="ant-form-item-extra"
                        id="renewal_effective_time_day_extra"
                      >
                        说明：续期指在当前时间基础上增加有效期时间
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="ant-modal-footer"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
                type="button"
              >
                <span>
                  关 闭
                </span>
              </button>
              <button
                class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-primary basic-button-wrapper css-geipcv"
                type="button"
              >
                <span>
                  提 交
                </span>
              </button>
            </div>
          </div>
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`page/Auth/AuthList/UpdateExpiration render init snap render snap when visible is false 1`] = `
<body>
  <div />
</body>
`;

exports[`page/Auth/AuthList/UpdateExpiration render submit data render click submit api error 1`] = `
<body>
  <div />
  <div>
    <div
      class="ant-modal-root css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-modal-mask"
      />
      <div
        class="ant-modal-wrap"
        tabindex="-1"
      >
        <div
          aria-labelledby="test-id"
          aria-modal="true"
          class="ant-modal css-dev-only-do-not-override-txh9fw basic-modal-wrapper css-vvpsbb"
          role="dialog"
          style="width: 480px;"
        >
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
          <div
            class="ant-modal-content"
          >
            <button
              aria-label="Close"
              class="ant-modal-close"
              type="button"
            >
              <span
                class="ant-modal-close-x"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 14 14"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m7 6.175 2.887-2.887.825.825L7.825 7l2.887 2.888-.825.824L7 7.825l-2.888 2.887-.824-.824L6.175 7 3.288 4.113l.824-.825z"
                  />
                </svg>
              </span>
            </button>
            <div
              class="ant-modal-header"
            >
              <div
                class="ant-modal-title"
                id="test-id"
              >
                授权续期
              </div>
            </div>
            <div
              class="ant-modal-body"
            >
              <form
                class="ant-form ant-form-vertical css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-form-item css-nvfblu css-dev-only-do-not-override-txh9fw ant-form-item-has-success"
                >
                  <div
                    class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
                  >
                    <div
                      class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
                    >
                      <label
                        class="ant-form-item-required"
                        for="renewal_effective_time_day"
                        title="续期"
                      >
                        续期
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <div
                            aria-describedby="renewal_effective_time_day_extra"
                            aria-required="true"
                            class="ant-select ant-select-in-form-item ant-select-status-success basic-select-wrapper css-iy4o4x css-dev-only-do-not-override-v9sov3 ant-select-single ant-select-show-arrow"
                          >
                            <div
                              class="ant-select-selector"
                            >
                              <span
                                class="ant-select-selection-search"
                              >
                                <input
                                  aria-activedescendant="renewal_effective_time_day_list_0"
                                  aria-autocomplete="list"
                                  aria-controls="renewal_effective_time_day_list"
                                  aria-describedby="renewal_effective_time_day_extra"
                                  aria-expanded="false"
                                  aria-haspopup="listbox"
                                  aria-owns="renewal_effective_time_day_list"
                                  aria-required="true"
                                  autocomplete="off"
                                  class="ant-select-selection-search-input"
                                  id="renewal_effective_time_day"
                                  readonly=""
                                  role="combobox"
                                  style="opacity: 0;"
                                  type="search"
                                  unselectable="on"
                                  value=""
                                />
                              </span>
                              <span
                                class="ant-select-selection-item"
                                title="一个星期"
                              >
                                一个星期
                              </span>
                            </div>
                            <span
                              aria-hidden="true"
                              class="ant-select-arrow"
                              style="user-select: none;"
                              unselectable="on"
                            >
                              <span
                                aria-label="down"
                                class="anticon anticon-down ant-select-suffix"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="down"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                      <div
                        class="ant-form-item-extra"
                        id="renewal_effective_time_day_extra"
                      >
                        说明：续期指在当前时间基础上增加有效期时间
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="ant-modal-footer"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
                disabled=""
                type="button"
              >
                <span>
                  关 闭
                </span>
              </button>
              <button
                class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-primary ant-btn-loading basic-button-wrapper css-geipcv"
                type="button"
              >
                <span
                  class="ant-btn-icon ant-btn-loading-icon"
                >
                  <span
                    aria-label="loading"
                    class="anticon anticon-loading anticon-spin"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="loading"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="0 0 1024 1024"
                      width="1em"
                    >
                      <path
                        d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
                      />
                    </svg>
                  </span>
                </span>
                <span>
                  提 交
                </span>
              </button>
            </div>
          </div>
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      class="ant-select-dropdown ant-select-dropdown-hidden css-dev-only-do-not-override-v9sov3 ant-select-dropdown-placement-bottomLeft"
      style="--arrow-x: 0px; --arrow-y: 0px; left: 0px; top: 0px; box-sizing: border-box; min-width: 0; width: 0px; pointer-events: none;"
    >
      <div>
        <div
          id="renewal_effective_time_day_list"
          role="listbox"
          style="height: 0px; width: 0px; overflow: hidden;"
        >
          <div
            aria-label="永久"
            aria-selected="false"
            id="renewal_effective_time_day_list_0"
            role="option"
          >
            -1
          </div>
          <div
            aria-label="一年"
            aria-selected="false"
            id="renewal_effective_time_day_list_1"
            role="option"
          >
            365
          </div>
        </div>
        <div
          class="rc-virtual-list"
          style="position: relative;"
        >
          <div
            class="rc-virtual-list-holder"
            style="max-height: 256px; overflow-y: hidden;"
          >
            <div>
              <div
                class="rc-virtual-list-holder-inner"
                style="display: flex; flex-direction: column;"
              >
                <div
                  aria-selected="false"
                  class="ant-select-item ant-select-item-option ant-select-item-option-active"
                  title="永久"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    永久
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-item-option-state"
                    style="user-select: none;"
                    unselectable="on"
                  />
                </div>
                <div
                  aria-selected="false"
                  class="ant-select-item ant-select-item-option"
                  title="一年"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    一年
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-item-option-state"
                    style="user-select: none;"
                    unselectable="on"
                  />
                </div>
                <div
                  aria-selected="false"
                  class="ant-select-item ant-select-item-option"
                  title="一个月"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    一个月
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-item-option-state"
                    style="user-select: none;"
                    unselectable="on"
                  />
                </div>
                <div
                  aria-selected="true"
                  class="ant-select-item ant-select-item-option ant-select-item-option-selected"
                  title="一个星期"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    一个星期
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-item-option-state"
                    style="user-select: none;"
                    unselectable="on"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="rc-virtual-list-scrollbar"
            style="width: 8px; top: 0px; bottom: 0px; right: 0px; position: absolute; display: none;"
          >
            <div
              class="rc-virtual-list-scrollbar-thumb"
              style="width: 100%; height: 128px; top: 0px; left: 0px; position: absolute; background: rgba(0, 0, 0, 0.5); border-radius: 99px; cursor: pointer; user-select: none;"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`page/Auth/AuthList/UpdateExpiration render submit data render click submit api error 2`] = `
<body>
  <div />
  <div>
    <div
      class="ant-modal-root css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-modal-mask"
      />
      <div
        class="ant-modal-wrap"
        tabindex="-1"
      >
        <div
          aria-labelledby="test-id"
          aria-modal="true"
          class="ant-modal css-dev-only-do-not-override-txh9fw basic-modal-wrapper css-vvpsbb"
          role="dialog"
          style="width: 480px;"
        >
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
          <div
            class="ant-modal-content"
          >
            <button
              aria-label="Close"
              class="ant-modal-close"
              type="button"
            >
              <span
                class="ant-modal-close-x"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 14 14"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m7 6.175 2.887-2.887.825.825L7.825 7l2.887 2.888-.825.824L7 7.825l-2.888 2.887-.824-.824L6.175 7 3.288 4.113l.824-.825z"
                  />
                </svg>
              </span>
            </button>
            <div
              class="ant-modal-header"
            >
              <div
                class="ant-modal-title"
                id="test-id"
              >
                授权续期
              </div>
            </div>
            <div
              class="ant-modal-body"
            >
              <form
                class="ant-form ant-form-vertical css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-form-item css-nvfblu css-dev-only-do-not-override-txh9fw ant-form-item-has-success"
                >
                  <div
                    class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
                  >
                    <div
                      class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
                    >
                      <label
                        class="ant-form-item-required"
                        for="renewal_effective_time_day"
                        title="续期"
                      >
                        续期
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <div
                            aria-describedby="renewal_effective_time_day_extra"
                            aria-required="true"
                            class="ant-select ant-select-in-form-item ant-select-status-success basic-select-wrapper css-iy4o4x css-dev-only-do-not-override-v9sov3 ant-select-single ant-select-show-arrow"
                          >
                            <div
                              class="ant-select-selector"
                            >
                              <span
                                class="ant-select-selection-search"
                              >
                                <input
                                  aria-activedescendant="renewal_effective_time_day_list_0"
                                  aria-autocomplete="list"
                                  aria-controls="renewal_effective_time_day_list"
                                  aria-describedby="renewal_effective_time_day_extra"
                                  aria-expanded="false"
                                  aria-haspopup="listbox"
                                  aria-owns="renewal_effective_time_day_list"
                                  aria-required="true"
                                  autocomplete="off"
                                  class="ant-select-selection-search-input"
                                  id="renewal_effective_time_day"
                                  readonly=""
                                  role="combobox"
                                  style="opacity: 0;"
                                  type="search"
                                  unselectable="on"
                                  value=""
                                />
                              </span>
                              <span
                                class="ant-select-selection-item"
                                title="一个星期"
                              >
                                一个星期
                              </span>
                            </div>
                            <span
                              aria-hidden="true"
                              class="ant-select-arrow"
                              style="user-select: none;"
                              unselectable="on"
                            >
                              <span
                                aria-label="down"
                                class="anticon anticon-down ant-select-suffix"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="down"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                      <div
                        class="ant-form-item-extra"
                        id="renewal_effective_time_day_extra"
                      >
                        说明：续期指在当前时间基础上增加有效期时间
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="ant-modal-footer"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
                type="button"
              >
                <span>
                  关 闭
                </span>
              </button>
              <button
                class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-primary basic-button-wrapper css-geipcv"
                type="button"
              >
                <span>
                  提 交
                </span>
              </button>
            </div>
          </div>
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      class="ant-select-dropdown ant-select-dropdown-hidden css-dev-only-do-not-override-v9sov3 ant-select-dropdown-placement-bottomLeft"
      style="--arrow-x: 0px; --arrow-y: 0px; left: 0px; top: 0px; box-sizing: border-box; min-width: 0; width: 0px; pointer-events: none;"
    >
      <div>
        <div
          id="renewal_effective_time_day_list"
          role="listbox"
          style="height: 0px; width: 0px; overflow: hidden;"
        >
          <div
            aria-label="永久"
            aria-selected="false"
            id="renewal_effective_time_day_list_0"
            role="option"
          >
            -1
          </div>
          <div
            aria-label="一年"
            aria-selected="false"
            id="renewal_effective_time_day_list_1"
            role="option"
          >
            365
          </div>
        </div>
        <div
          class="rc-virtual-list"
          style="position: relative;"
        >
          <div
            class="rc-virtual-list-holder"
            style="max-height: 256px; overflow-y: hidden;"
          >
            <div>
              <div
                class="rc-virtual-list-holder-inner"
                style="display: flex; flex-direction: column;"
              >
                <div
                  aria-selected="false"
                  class="ant-select-item ant-select-item-option ant-select-item-option-active"
                  title="永久"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    永久
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-item-option-state"
                    style="user-select: none;"
                    unselectable="on"
                  />
                </div>
                <div
                  aria-selected="false"
                  class="ant-select-item ant-select-item-option"
                  title="一年"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    一年
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-item-option-state"
                    style="user-select: none;"
                    unselectable="on"
                  />
                </div>
                <div
                  aria-selected="false"
                  class="ant-select-item ant-select-item-option"
                  title="一个月"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    一个月
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-item-option-state"
                    style="user-select: none;"
                    unselectable="on"
                  />
                </div>
                <div
                  aria-selected="true"
                  class="ant-select-item ant-select-item-option ant-select-item-option-selected"
                  title="一个星期"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    一个星期
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-item-option-state"
                    style="user-select: none;"
                    unselectable="on"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="rc-virtual-list-scrollbar"
            style="width: 8px; top: 0px; bottom: 0px; right: 0px; position: absolute; display: none;"
          >
            <div
              class="rc-virtual-list-scrollbar-thumb"
              style="width: 100%; height: 128px; top: 0px; left: 0px; position: absolute; background: rgba(0, 0, 0, 0.5); border-radius: 99px; cursor: pointer; user-select: none;"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`page/Auth/AuthList/UpdateExpiration render submit data render click submit api success 1`] = `
<body>
  <div />
  <div>
    <div
      class="ant-modal-root css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-modal-mask"
      />
      <div
        class="ant-modal-wrap"
        tabindex="-1"
      >
        <div
          aria-labelledby="test-id"
          aria-modal="true"
          class="ant-modal css-dev-only-do-not-override-txh9fw basic-modal-wrapper css-vvpsbb"
          role="dialog"
          style="width: 480px;"
        >
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
          <div
            class="ant-modal-content"
          >
            <button
              aria-label="Close"
              class="ant-modal-close"
              type="button"
            >
              <span
                class="ant-modal-close-x"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 14 14"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m7 6.175 2.887-2.887.825.825L7.825 7l2.887 2.888-.825.824L7 7.825l-2.888 2.887-.824-.824L6.175 7 3.288 4.113l.824-.825z"
                  />
                </svg>
              </span>
            </button>
            <div
              class="ant-modal-header"
            >
              <div
                class="ant-modal-title"
                id="test-id"
              >
                授权续期
              </div>
            </div>
            <div
              class="ant-modal-body"
            >
              <form
                class="ant-form ant-form-vertical css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-form-item css-nvfblu css-dev-only-do-not-override-txh9fw ant-form-item-has-success"
                >
                  <div
                    class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
                  >
                    <div
                      class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
                    >
                      <label
                        class="ant-form-item-required"
                        for="renewal_effective_time_day"
                        title="续期"
                      >
                        续期
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <div
                            aria-describedby="renewal_effective_time_day_extra"
                            aria-required="true"
                            class="ant-select ant-select-in-form-item ant-select-status-success basic-select-wrapper css-iy4o4x css-dev-only-do-not-override-v9sov3 ant-select-single ant-select-show-arrow"
                          >
                            <div
                              class="ant-select-selector"
                            >
                              <span
                                class="ant-select-selection-search"
                              >
                                <input
                                  aria-activedescendant="renewal_effective_time_day_list_0"
                                  aria-autocomplete="list"
                                  aria-controls="renewal_effective_time_day_list"
                                  aria-describedby="renewal_effective_time_day_extra"
                                  aria-expanded="false"
                                  aria-haspopup="listbox"
                                  aria-owns="renewal_effective_time_day_list"
                                  aria-required="true"
                                  autocomplete="off"
                                  class="ant-select-selection-search-input"
                                  id="renewal_effective_time_day"
                                  readonly=""
                                  role="combobox"
                                  style="opacity: 0;"
                                  type="search"
                                  unselectable="on"
                                  value=""
                                />
                              </span>
                              <span
                                class="ant-select-selection-item"
                                title="永久"
                              >
                                永久
                              </span>
                            </div>
                            <span
                              aria-hidden="true"
                              class="ant-select-arrow"
                              style="user-select: none;"
                              unselectable="on"
                            >
                              <span
                                aria-label="down"
                                class="anticon anticon-down ant-select-suffix"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="down"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                      <div
                        class="ant-form-item-extra"
                        id="renewal_effective_time_day_extra"
                      >
                        说明：续期指在当前时间基础上增加有效期时间
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="ant-modal-footer"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
                disabled=""
                type="button"
              >
                <span>
                  关 闭
                </span>
              </button>
              <button
                class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-primary ant-btn-loading basic-button-wrapper css-geipcv"
                type="button"
              >
                <span
                  class="ant-btn-icon ant-btn-loading-icon"
                >
                  <span
                    aria-label="loading"
                    class="anticon anticon-loading anticon-spin"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="loading"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="0 0 1024 1024"
                      width="1em"
                    >
                      <path
                        d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
                      />
                    </svg>
                  </span>
                </span>
                <span>
                  提 交
                </span>
              </button>
            </div>
          </div>
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      class="ant-select-dropdown ant-select-dropdown-hidden css-dev-only-do-not-override-v9sov3 ant-select-dropdown-placement-bottomLeft"
      style="--arrow-x: 0px; --arrow-y: 0px; left: 0px; top: 0px; box-sizing: border-box; min-width: 0; width: 0px; pointer-events: none;"
    >
      <div>
        <div
          id="renewal_effective_time_day_list"
          role="listbox"
          style="height: 0px; width: 0px; overflow: hidden;"
        >
          <div
            aria-label="永久"
            aria-selected="true"
            id="renewal_effective_time_day_list_0"
            role="option"
          >
            -1
          </div>
          <div
            aria-label="一年"
            aria-selected="false"
            id="renewal_effective_time_day_list_1"
            role="option"
          >
            365
          </div>
        </div>
        <div
          class="rc-virtual-list"
          style="position: relative;"
        >
          <div
            class="rc-virtual-list-holder"
            style="max-height: 256px; overflow-y: hidden;"
          >
            <div>
              <div
                class="rc-virtual-list-holder-inner"
                style="display: flex; flex-direction: column;"
              >
                <div
                  aria-selected="true"
                  class="ant-select-item ant-select-item-option ant-select-item-option-active ant-select-item-option-selected"
                  title="永久"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    永久
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-item-option-state"
                    style="user-select: none;"
                    unselectable="on"
                  />
                </div>
                <div
                  aria-selected="false"
                  class="ant-select-item ant-select-item-option"
                  title="一年"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    一年
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-item-option-state"
                    style="user-select: none;"
                    unselectable="on"
                  />
                </div>
                <div
                  aria-selected="false"
                  class="ant-select-item ant-select-item-option"
                  title="一个月"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    一个月
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-item-option-state"
                    style="user-select: none;"
                    unselectable="on"
                  />
                </div>
                <div
                  aria-selected="false"
                  class="ant-select-item ant-select-item-option"
                  title="一个星期"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    一个星期
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-item-option-state"
                    style="user-select: none;"
                    unselectable="on"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="rc-virtual-list-scrollbar"
            style="width: 8px; top: 0px; bottom: 0px; right: 0px; position: absolute; display: none;"
          >
            <div
              class="rc-virtual-list-scrollbar-thumb"
              style="width: 100%; height: 128px; top: 0px; left: 0px; position: absolute; background: rgba(0, 0, 0, 0.5); border-radius: 99px; cursor: pointer; user-select: none;"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`page/Auth/AuthList/UpdateExpiration render submit data render click submit api success 2`] = `
<body>
  <div />
  <div>
    <div
      class="ant-modal-root css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-modal-wrap"
        style="display: none;"
        tabindex="-1"
      >
        <div
          aria-labelledby="test-id"
          aria-modal="true"
          class="ant-modal css-dev-only-do-not-override-txh9fw basic-modal-wrapper css-vvpsbb"
          role="dialog"
          style="width: 480px; display: none;"
        >
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
          <div
            class="ant-modal-content"
          >
            <button
              aria-label="Close"
              class="ant-modal-close"
              type="button"
            >
              <span
                class="ant-modal-close-x"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 14 14"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m7 6.175 2.887-2.887.825.825L7.825 7l2.887 2.888-.825.824L7 7.825l-2.888 2.887-.824-.824L6.175 7 3.288 4.113l.824-.825z"
                  />
                </svg>
              </span>
            </button>
            <div
              class="ant-modal-header"
            >
              <div
                class="ant-modal-title"
                id="test-id"
              >
                授权续期
              </div>
            </div>
            <div
              class="ant-modal-body"
            >
              <form
                class="ant-form ant-form-vertical css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-form-item css-nvfblu css-dev-only-do-not-override-txh9fw ant-form-item-has-success"
                >
                  <div
                    class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
                  >
                    <div
                      class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
                    >
                      <label
                        class="ant-form-item-required"
                        for="renewal_effective_time_day"
                        title="续期"
                      >
                        续期
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <div
                            aria-describedby="renewal_effective_time_day_extra"
                            aria-required="true"
                            class="ant-select ant-select-in-form-item ant-select-status-success basic-select-wrapper css-iy4o4x css-dev-only-do-not-override-v9sov3 ant-select-single ant-select-show-arrow"
                          >
                            <div
                              class="ant-select-selector"
                            >
                              <span
                                class="ant-select-selection-search"
                              >
                                <input
                                  aria-activedescendant="renewal_effective_time_day_list_0"
                                  aria-autocomplete="list"
                                  aria-controls="renewal_effective_time_day_list"
                                  aria-describedby="renewal_effective_time_day_extra"
                                  aria-expanded="false"
                                  aria-haspopup="listbox"
                                  aria-owns="renewal_effective_time_day_list"
                                  aria-required="true"
                                  autocomplete="off"
                                  class="ant-select-selection-search-input"
                                  id="renewal_effective_time_day"
                                  readonly=""
                                  role="combobox"
                                  style="opacity: 0;"
                                  type="search"
                                  unselectable="on"
                                  value=""
                                />
                              </span>
                              <span
                                class="ant-select-selection-item"
                                title="永久"
                              >
                                永久
                              </span>
                            </div>
                            <span
                              aria-hidden="true"
                              class="ant-select-arrow"
                              style="user-select: none;"
                              unselectable="on"
                            >
                              <span
                                aria-label="down"
                                class="anticon anticon-down ant-select-suffix"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="down"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                      <div
                        class="ant-form-item-extra"
                        id="renewal_effective_time_day_extra"
                      >
                        说明：续期指在当前时间基础上增加有效期时间
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="ant-modal-footer"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
                disabled=""
                type="button"
              >
                <span>
                  关 闭
                </span>
              </button>
              <button
                class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-primary ant-btn-loading basic-button-wrapper css-geipcv"
                type="button"
              >
                <span
                  class="ant-btn-icon ant-btn-loading-icon"
                >
                  <span
                    aria-label="loading"
                    class="anticon anticon-loading anticon-spin"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="loading"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="0 0 1024 1024"
                      width="1em"
                    >
                      <path
                        d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
                      />
                    </svg>
                  </span>
                </span>
                <span>
                  提 交
                </span>
              </button>
            </div>
          </div>
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      class="ant-select-dropdown ant-select-dropdown-hidden css-dev-only-do-not-override-v9sov3 ant-select-dropdown-placement-bottomLeft"
      style="--arrow-x: 0px; --arrow-y: 0px; left: 0px; top: 0px; box-sizing: border-box; min-width: 0; width: 0px; pointer-events: none;"
    >
      <div>
        <div
          id="renewal_effective_time_day_list"
          role="listbox"
          style="height: 0px; width: 0px; overflow: hidden;"
        >
          <div
            aria-label="永久"
            aria-selected="true"
            id="renewal_effective_time_day_list_0"
            role="option"
          >
            -1
          </div>
          <div
            aria-label="一年"
            aria-selected="false"
            id="renewal_effective_time_day_list_1"
            role="option"
          >
            365
          </div>
        </div>
        <div
          class="rc-virtual-list"
          style="position: relative;"
        >
          <div
            class="rc-virtual-list-holder"
            style="max-height: 256px; overflow-y: hidden;"
          >
            <div>
              <div
                class="rc-virtual-list-holder-inner"
                style="display: flex; flex-direction: column;"
              >
                <div
                  aria-selected="true"
                  class="ant-select-item ant-select-item-option ant-select-item-option-active ant-select-item-option-selected"
                  title="永久"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    永久
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-item-option-state"
                    style="user-select: none;"
                    unselectable="on"
                  />
                </div>
                <div
                  aria-selected="false"
                  class="ant-select-item ant-select-item-option"
                  title="一年"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    一年
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-item-option-state"
                    style="user-select: none;"
                    unselectable="on"
                  />
                </div>
                <div
                  aria-selected="false"
                  class="ant-select-item ant-select-item-option"
                  title="一个月"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    一个月
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-item-option-state"
                    style="user-select: none;"
                    unselectable="on"
                  />
                </div>
                <div
                  aria-selected="false"
                  class="ant-select-item ant-select-item-option"
                  title="一个星期"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    一个星期
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-item-option-state"
                    style="user-select: none;"
                    unselectable="on"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="rc-virtual-list-scrollbar"
            style="width: 8px; top: 0px; bottom: 0px; right: 0px; position: absolute; display: none;"
          >
            <div
              class="rc-virtual-list-scrollbar-thumb"
              style="width: 100%; height: 128px; top: 0px; left: 0px; position: absolute; background: rgba(0, 0, 0, 0.5); border-radius: 99px; cursor: pointer; user-select: none;"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-message ant-message-top css-dev-only-do-not-override-txh9fw"
    style="left: 50%; transform: translateX(-50%); top: 8px;"
  >
    <div
      class="ant-message-notice ant-message-notice-success css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-message-notice-content"
      >
        <div
          class="ant-message-custom-content ant-message-success"
        >
          <span
            aria-label="check-circle"
            class="anticon anticon-check-circle"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="check-circle"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm193.5 301.7l-210.6 292a31.8 31.8 0 01-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.5 12.7z"
              />
            </svg>
          </span>
          <span>
            更新成功
          </span>
        </div>
      </div>
    </div>
  </div>
</body>
`;
